<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>mp3.player</groupId>
    <artifactId>demo</artifactId>
    <version>1.1.0</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <dependencies>
        <!-- JLayer dependency -->
        <dependency>
            <groupId>javazoom</groupId>
            <artifactId>jl</artifactId>
            <version>1.0.1</version>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>21.0.5</version> <!-- 버전은 현재 사용하는 JavaFX 버전으로 맞춰주세요 -->
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-media</artifactId>
            <version>21.0.5</version> <!-- 버전은 현재 사용하는 JavaFX 버전으로 맞춰주세요 -->
        </dependency>
    </dependencies>

    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
        <plugins>
            <!-- Maven Compiler Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>

            <!-- Maven Exec Plugin -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.0.0</version> <!-- 버전 변경 -->
                <configuration>
                    <mainClass>mp3.player.MusicPlayerUI</mainClass>
                    <arguments>
                        <argument>--module-path</argument>
                        <argument>C:/Users/box70/Desktop/Java_Programs/Mp3_Player/lib/javafx-sdk-21.0.5/lib</argument>
                        <argument>--add-modules</argument>
                        <argument>javafx.controls,javafx.media</argument>
                    </arguments>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
